# src/domains/users/infra/http/routes/user.routes.ts
@@ -1,10 +1,15 @@
 import { Router } from 'express';
 import { celebrate, Joi, Segments } from 'celebrate';
+import multer from 'multer';
 
+import uploadConfig from '@config/upload';
 import { UserController } from '../controllers/UserController';
+import { AvatarController } from '../controllers/AvatarController';
 
 const userRoutes = Router();
 const userController = new UserController();
+const avatarController = new AvatarController();
+const upload = multer(uploadConfig.multer);
 
 userRoutes.post(
   '/',
@@ -17,6 +22,17 @@ userRoutes.post(
     },
   }),
   userController.create,
+);
+
+userRoutes.patch(
+  '/avatar/:userId',
+  celebrate({
+    [Segments.PARAMS]: {
+      userId: Joi.string().required(),
+    },
+  }),
+  upload.single('avatar'),
+  avatarController.update,
 );
 
 export { userRoutes };
